# intl-measurements

./: README.md
data/: README.md  langids.txt  pluralrules.txt  thai.txt  zhuangzi-en.txt  zhuangzi-zh.txt
data/normalization/: en.txt
harness/: Cargo.toml
harness/data/datetime/: datetime.json
harness/data/locale/: langids.json
harness/data/pluralrules/: plurals.json
harness/src/: datetime.rs  lib.rs  locale.rs  main.rs  plurals.rs  structs.rs
harness/src/data/: datetime.rs  locale.rs  mod.rs  plurals.rs
harness/tests/: locale.rs
icu/: .gitignore  Makefile  date  date.cpp  locale  locale.cpp  normalize.cpp  pluralrules.cpp
icu4c/cpp/: .gitignore  Makefile  date.cpp  line_break.cpp  locale.cpp  macos.sh  normalize.cpp  pluralrules.cpp  uniset.cpp
icu4c/locale/: Cargo.toml
icu4c/locale/src/: main.rs
icu4c/pluralrules/: Cargo.toml
icu4c/pluralrules/src/: main.rs
icu4x/data/icu4x/bincode/: manifest.json
icu4x/data/icu4x/bincode/dates/gregory@1/: af-NA.bincode  af.bincode  am.bincode  ar-DZ.bincode  ar-IL.bincode  ar-IQ.bincode  ar-KM.bincode  ar-MA.bincode  ar-MR.bincode  ar-PS.bincode  ar-SO.bincode  ar.bincode  as.bincode  az.bincode  be.bincode  bg.bincode  bn.bincode  bs.bincode  ca-AD.bincode  cs.bincode  cy.bincode  da.bincode  de-AT.bincode  de-BE.bincode  de-CH.bincode  de-IT.bincode  de-LI.bincode  de-LU.bincode  de.bincode  el-CY.bincode  en-AE.bincode  en-AU.bincode  en-BE.bincode  en-BI.bincode  en-BW.bincode  en-BZ.bincode  en-CA.bincode  en-DK.bincode  en-FI.bincode  en-FJ.bincode  (+133 more)
icu4x/data/icu4x/bincode/datetime/gregory_patterns@1/: af-NA.bincode  af.bincode  agq.bincode  ak.bincode  am.bincode  ar-IL.bincode  ar-KM.bincode  ar-KW.bincode  as.bincode  ast.bincode  az-Cyrl.bincode  az.bincode  bas.bincode  be.bincode  bem.bincode  bez.bincode  bg.bincode  bm.bincode  bn-IN.bincode  bo.bincode  br.bincode  brx.bincode  bs-Cyrl.bincode  bs.bincode  ca-ES-valencia.bincode  ceb.bincode  chr.bincode  ckb-IR.bincode  ckb.bincode  cs.bincode  cy.bincode  da.bincode  de-AT.bincode  de-LU.bincode  doi.bincode  dsb.bincode  dua.bincode  dz.bincode  ee-TG.bincode  ee.bincode  (+199 more)
icu4x/data/icu4x/bincode/datetime/gregory_symbols@1/: af-NA.bincode  agq.bincode  ak.bincode  am.bincode  ar-IQ.bincode  ar-MA.bincode  ar-MR.bincode  ar-PS.bincode  ar-TN.bincode  as.bincode  asa.bincode  ast.bincode  az-Cyrl.bincode  az.bincode  bas.bincode  be.bincode  bem.bincode  bez.bincode  bg.bincode  bm.bincode  bo.bincode  br.bincode  brx.bincode  bs-Cyrl.bincode  bs.bincode  ca.bincode  ce.bincode  ceb.bincode  cgg.bincode  chr.bincode  ckb.bincode  cs.bincode  cy.bincode  da-GL.bincode  dav.bincode  de-AT.bincode  de-BE.bincode  de-CH.bincode  de-IT.bincode  de-LI.bincode  (+209 more)
icu4x/data/icu4x/bincode/decimal/symbols@1/: ar-EH.bincode  ar-MA.bincode  ar.bincode  be.bincode  bn.bincode  ckb.bincode  dz.bincode  ee.bincode  en-US-posix.bincode  en.bincode  es.bincode  et.bincode  fa-AF.bincode  ff-Adlm-SN.bincode  fo-DK.bincode  fr.bincode  gsw-LI.bincode  gu.bincode  it-CH.bincode  it.bincode  ks.bincode  mni-Beng.bincode  my.bincode  ne.bincode  pa-Arab.bincode  sat.bincode  se.bincode  sk.bincode  sq-XK.bincode  twq.bincode  wae.bincode
icu4x/data/icu4x/bincode/likelysubtags/: likelysubtags@1.bincode
icu4x/data/icu4x/bincode/plurals/cardinal@1/: be.bincode  br.bincode  ceb.bincode  cy.bincode  da.bincode  fil.bincode  fr.bincode  ga.bincode  gd.bincode  gv.bincode  he.bincode  hsb.bincode  is.bincode  kab.bincode  ksh.bincode  kw.bincode  lag.bincode  lt.bincode  mg.bincode  mk.bincode  mo.bincode  mt.bincode  pl.bincode  prg.bincode  pt.bincode  shi.bincode  si.bincode  sk.bincode  sl.bincode  smj.bincode  tzm.bincode
icu4x/data/icu4x/bincode/plurals/ordinal@1/: as.bincode  az.bincode  be.bincode  ca.bincode  cy.bincode  gd.bincode  gu.bincode  hu.bincode  it.bincode  ka.bincode  kk.bincode  kw.bincode  lij.bincode  mk.bincode  mr.bincode  ne.bincode  or.bincode  scn.bincode  sq.bincode  sv.bincode  tk.bincode  uk.bincode
icu4x/data/icu4x/bincode/time_zone/exemplar_cities@1/: af-NA.bincode  am.bincode  as.bincode  ast.bincode  az-Latn.bincode  be.bincode  bg.bincode  bo.bincode  br.bincode  brx.bincode  bs-Cyrl.bincode  bs-Latn.bincode  ca-AD.bincode  ce.bincode  ceb.bincode  chr.bincode  cs.bincode  cy.bincode  da-GL.bincode  de-AT.bincode  de-CH.bincode  doi.bincode  dsb.bincode  dz.bincode  ee-TG.bincode  el.bincode  en-GB.bincode  en-IN.bincode  es-MX.bincode  es-US.bincode  et.bincode  eu.bincode  fa-AF.bincode  ff-Adlm-GM.bincode  fi.bincode  fil.bincode  fo.bincode  fr-CA.bincode  fur.bincode  fy.bincode  (+103 more)
icu4x/data/icu4x/bincode/time_zone/formats@1/: af.bincode  (+119 more)
icu4x/data/icu4x/json/: manifest.json
icu4x/data/icu4x/json/likelysubtags/: likelysubtags@1.json
icu4x/data/icu4x/json/locale_canonicalizer/: aliases@1.json  likelysubtags@1.json
icu4x/datetime/: Cargo.toml
icu4x/datetime/src/: main.rs
icu4x/locale/: Cargo.toml
icu4x/locale/benches/: langid.rs  locale.rs
icu4x/locale/src/: main.rs
icu4x/pluralrules/: Cargo.toml
icu4x/pluralrules/src/: main.rs
icu4x/segmenter/: Cargo.toml
icu4x/segmenter/src/: main.rs
icu4x/uniset/: Cargo.toml
icu4x/uniset/src/: main.rs
rust/datetime/: Cargo.toml
rust/datetime/src/: main.rs
rust/locale/benches/: langid.rs
rust/locale/tests/: main.rs
rust/normalize/src/: ffi.rs  lib.rs  main.rs
rust/pluralrules/: Cargo.toml
rust/uax14_rs/: Cargo.toml
rust/uax14_rs/src/: main.rs
rust_icu/datetime/: Cargo.toml
rust_icu/datetime/src/: main.rs
rust_icu/line_break/: Cargo.toml
rust_icu/line_break/src/: main.rs
rust_icu/locale/: Cargo.toml
rust_icu/locale/src/: main.rs
rust_icu/plurals/: Cargo.toml
rust_icu/plurals/src/: main.rs
unic/datetime/: Cargo.toml
unic/datetime/src/: main.rs
unic/locale/: Cargo.toml
unic/locale/benches/: langid.rs  locale.rs
unic/locale/src/: lib.rs  main.rs
unic/normalize/: Cargo.toml
unic/normalize/benches/: normalize.rs
unic/normalize/src/: ffi.rs  lib.rs  main.rs
unic/pluralrules/: Cargo.toml
unic/pluralrules/src/: main.rs
(+1824 files in other folders)
