[package]
name = "datetime-test"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intl-harness = { path = "../../harness" }
icu_locid = "0.2"
icu_datetime = "0.2"
icu_provider_fs = { version = "0.2" , features = ["bincode"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
