[package]
name = "datetime-test"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intl-harness = { path = "../../harness" }
icu_locid = { path = "../../../icu4x/components/locid" }
icu_calendar = { path = "../../../icu4x/components/calendar" }
icu_datetime = { path = "../../../icu4x/components/datetime" }
icu_provider_blob = { path = "../../../icu4x/provider/blob" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
