[package]
name = "locale-icu4x-test"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

[dependencies]
intl-harness = { path = "../../harness" }
icu_locid = "0.2"

[dev-dependencies]

criterion = "0.3"

[[bench]]
name = "langid"
harness = false

[[bench]]
name = "locale"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
