[package]
name = "pluralrules-icu4x-test"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

[dependencies]
intl-harness = { path = "../../harness" }
icu_locid = { path = "../../../icu4x/components/locid" }
icu_plurals = { path = "../../../icu4x/components/plurals" }
icu_provider_fs = { path = "../../../icu4x/components/provider_fs" , features = ["bincode"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
