[package]
name = "pluralrules-icu4x-test"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

[dependencies]
intl-harness = { path = "../../harness" }
icu_locid = "0.3"
icu_plurals = "0.3"
icu_provider_fs = { version = "0.3" , features = ["bincode"] }
icu_provider_blob = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
