[package]
name = "icu_segmenter_test"
version = "0.1.0"
authors = ["Ting-Yu Lin <aethanyc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# icu_segmenter is still experimental, so it is not on crates.io yet.
icu_segmenter = { git = "https://github.com/unicode-org/icu4x", tag = "icu@0.3.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
