[package]
name = "datetime-test"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unic-datetime = { git = "https://github.com/zbraniecki/unic-datetime", rev = "055e15b655cee817c42cd9ed4e3ebf52a5729778", features = ["binary"] }
