[package]
name = "pluralrules-test"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intl-harness = { path = "../../harness" }
intl_pluralrules = "7.0"
unic-langid = {version = "0.9", features = ["macros"] }
