[package]
name = "rust_icu_line_break_test"
version = "0.1.0"
authors = ["Ting-Yu Lin <aethanyc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_icu = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
