[package]
name = "plurals"
version = "0.1.0"
authors = ["Zibi Braniecki <zbraniecki@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intl-harness = { path = "../../harness" }
rust_icu_uloc = "0.3"
rust_icu_upluralrules = "0.3"
rust_icu_common = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
