[package]
name = "locale"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

[dependencies]
unic-langid = { version = "0.8", features = ["likelysubtags"] }
unic-locale = { version = "0.8", features = ["likelysubtags"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "langid"
harness = false

[[bench]]
name = "locale"
harness = false
